--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ repositories {
 }
 dependencies {
    compile 'org.codehaus.groovy:groovy-all:2.1.8'
+   compile 'io.vertx:vertx-core:2.0.2-final'
+   compile 'io.vertx:lang-groovy:2.0.0-final'
 }
 
 jar {
