--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,18 @@ apply plugin: 'groovy'
 
 repositories {
    mavenCentral()
+
+   maven {
+      url 'https://oss.sonatype.org/content/repositories/snapshots/'
+   }
 }
+
 dependencies {
    compile 'org.codehaus.groovy:groovy-all:2.1.8'
    compile 'io.vertx:vertx-core:2.0.2-final'
    compile 'io.vertx:lang-groovy:2.0.0-final'
    compile 'org.mozilla:rhino:1.7R4'
+   compile 'com.directmyfile:NanoBot:0.5.2-SNAPSHOT'
 }
 
 jar {
