--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
    compile 'io.vertx:lang-groovy:2.0.0-final'
    compile 'org.mozilla:rhino:1.7R4'
    compile 'com.directmyfile:NanoBot:0.5.2-SNAPSHOT'
+   compile 'mysql:mysql-connector-java:5.1.26'
 }
 
 jar {
