--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'groovy'
 apply plugin: 'build-dashboard'
 apply plugin: 'codenarc'
 
+version = "0.2-SNAPSHOT"
+
 ext {
    groovyVersion = '2.1.9:indy'
 }
