--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,36 @@
 apply plugin: 'groovy'
 apply plugin: 'build-dashboard'
 apply plugin: 'codenarc'
+apply plugin: 'cpp-lib'
 
 version = "0.2-SNAPSHOT"
 
 ext {
    groovyVersion = '2.1.9:indy'
+}
+
+sourceSets {
+    main {
+        output.resourcesDir = 'build/classes/production'
+        output.classesDir = 'build/classes/production'
+    }
+}
+
+sources {
+    main {
+        cpp {
+            source.srcDirs = ['src/main/c']
+        }
+    }
+}
+
+tasks.withType(LinkSharedLibrary) {
+    outputFile = file('build/binaries/libwrapper.so')
+    linkerArgs = [ '-rpath=$ORIGIN' ]
+}
+
+tasks.withType(CppCompile) {
+    compilerArgs = [ '-I/opt/java/include', '-I/opt/java/include/linux', '-Lbuild/binaries' ]
 }
 
 repositories {
