--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'codenarc'
 apply plugin: 'cpp-lib'
 apply plugin: 'dlang'
  
-version = "0.2-SNAPSHOT"
+version = "0.2.0-SNAPSHOT"
  
 ext {
     groovyVersion = '2.1.9:indy'
@@ -52,19 +52,20 @@ repositories {
  
 dependencies {
     compile "org.codehaus.groovy:groovy-all:${ext.groovyVersion}"
-    compile 'io.vertx:vertx-core:2.0.2-final'
+    compile ('io.vertx:vertx-core:2.0.2-final') {
+        exclude group: "com.hazelcast", module: "hazelcast"
+    }
     compile 'io.vertx:lang-groovy:2.0.0-final'
     compile 'org.mozilla:rhino:1.7R4'
     compile 'com.directmyfile:NanoBot:0.5.2-SNAPSHOT'
     compile 'mysql:mysql-connector-java:5.1.26'
     testCompile 'junit:junit:4.11'
-    testCompile "org.codehaus.groovy:groovy-all:${ext.groovyVersion}"
 }
  
 tasks.withType(GroovyCompile) {
     groovyOptions.optimizationOptions.indy = true
 }
- 
+
 compileD.dependsOn 'mainSharedLibrary'
  
 dlang {
@@ -78,4 +79,9 @@ jar {
     }
  
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    exclude "TestNanoBot*.class"
+    exclude "overviewj.html"
+    exclude "overview.html"
+    exclude "LICENSE.txt"
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
