--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,6 @@
-buildscript {
-    dependencies {
-        classpath files("gradle/gradle-d-plugin.jar")
-    }
-}
- 
 apply plugin: 'groovy'
 apply plugin: 'build-dashboard'
 apply plugin: 'codenarc'
-apply plugin: 'cpp-lib'
-apply plugin: 'dlang'
  
 version = "0.2.0-SNAPSHOT"
  
@@ -22,24 +14,6 @@ sourceSets {
         output.resourcesDir = 'build/classes/production'
         output.classesDir = 'build/classes/production'
     }
-}
- 
-sources {
-    main {
-        cpp {
-            source.srcDirs = ['src/main/c']
-        }
-    }
-}
- 
-tasks.withType(LinkSharedLibrary) {
-    outputFile = file('build/binaries/libwrapper.so')
-    linkerArgs = ['-rpath=$ORIGIN']
-}
- 
-tasks.withType(CppCompile) {
-    compilerArgs = ['-Lbuild/binaries', '-lbot']
-    includes files(jniInclude, "${jniInclude}/linux")
 }
  
 repositories {
@@ -62,20 +36,16 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
  
+task makeDBot(type: Exec) {
+    commandLine './gradle/dbot.sh'
+}
+ 
 tasks.withType(GroovyCompile) {
     groovyOptions.optimizationOptions.indy = true
 }
-
-compileD.dependsOn 'mainSharedLibrary'
- 
-dlang {
-    sourceFolder = "src/main/d"
-    compilerOpts = ['-defaultlib=phobos2', '-fPIC', '-shared', '-odbuild/objectFiles/bot', '-ofbuild/binaries/libbot.so']
-}
  
 jar {
-
-    dependsOn 'compileD'
+    dependsOn 'makeDBot'
 
     manifest {
         attributes('Main-class': 'com.directmyfile.ci.Main')
@@ -83,17 +53,21 @@ jar {
  
     // Pack Dependencies
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    
+ 
     // Pack Natives
     into ("natives") {
-        from fileTree("build/binaries/")
+        from fileTree("build/binaries/natives")
     }
     // Makes Jar Clean
     exclude "TestNanoBot*.class"
     exclude "overviewj.html"
     exclude "overview.html"
     exclude "LICENSE.txt"
-
+ 
     // Fix Duplicate Zip Entry Bugs
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+ 
+task wrapper(type: Wrapper) {
+  gradleVersion = "1.9-rc-2"
 }
