Travis CI Fixed. Updated Build Status.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: groovy
 before_install:
   - "wget http://downloads.dlang.org/releases/2013/dmd_2.064.2-0_amd64.deb -Odmd.deb"
 install:
+  - "sudo apt-get install gcc-multilib"
   - "sudo dpkg -i dmd.deb"
   - "rm dmd.deb"
 before_deploy: "cd build/libs/"
