--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ install:
   - "sudo apt-get install gcc-multilib"
   - "sudo dpkg -i dmd.deb"
   - "rm dmd.deb"
-before_deploy: "cd build/libs/"
+before_deploy:
+  - "mkdir deploy/builds/CI/${TRAVIS_BUILD_NUMBER} -p"
+  - "cd deploy/"
 deploy:
   provider: s3
   access_key_id: AKIAIHIGFEL2YAAKGPRQ
