--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "depends/drirc"]
 	path = depends/drirc
-	url = https://github.com/DirectMyFile/DrIRC.git
+	url = git://github.com/DirectMyFile/DrIRC.git
