--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ script:
   - "TERM=dumb ./gradlew check"
 before_deploy:
   - "mkdir deploy/builds/CI/${TRAVIS_BUILD_NUMBER} -p"
-  - "cd deploy/"
   - "cp ../build/libs/* deploy/builds/CI/${TRAVIS_BUILD_NUMBER}"
+  - "cd deploy"
 deploy:
   provider: s3
   access_key_id: AKIAIHIGFEL2YAAKGPRQ
