--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'groovy'
 apply plugin: 'build-dashboard'
 apply plugin: 'codenarc'
  
-version = "0.2.0-SNAPSHOT"
-
 ext {
     groovyVersion = '2.1.9:indy'
     jdkHome = "${System.getProperty("java.home")}/../"
+    version = "0.2.1"
 }
  
 sourceSets {
