--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,6 @@ ext {
     version = "0.2.5"
 }
 
-def targetArch = hasProperty("native.target") ? getProperty("native.target") : ""
-
 repositories {
     mavenCentral()
 
@@ -47,7 +45,7 @@ task makeDBot(type: Exec) {
     inputs.dir file("src/main/c")
     inputs.dir file("src/main/d")
     outputs.dir file("build/natives")
-    commandLine "./gradle/dbot.sh", jdkHome, targetArch
+    commandLine "./gradle/dbot.sh", jdkHome
 }
 
 task tagRelease(type: GitTag) {
