Refactored a good portion of all classes to reflect a better setup. It is much more clean now.

--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,7 @@ jar {
     dependsOn 'makeDBot'
 
     manifest {
-        attributes('Main-class': 'com.directmyfile.ci.Main')
+        attributes('Main-class': 'com.directmyfile.ci.core.Main')
     }
 
     // Pack Dependencies
