--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: groovy
+jdk: oraclejdk8
 before_install:
   - "wget http://cdn.bitbucket.org/directmyfile/simpleci/downloads/dmd.deb -Odmd.deb"
 install:
