Update Groovy Snapshots repo url to use the new url hosted by JFrog.

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
     }
 
     maven {
-        url 'http://snapshots.repository.codehaus.org/'
+        url 'https://oss.jfrog.org/oss-snapshot-local/'
     }
 }
 
