Added the new Java Scripting API Plugin Provider. Removed Groovy/JS plugin provider, which ScriptPluginProvider will do as well. Tested with Groovy, Nashorn, Jython. Confirmed to not work with JRuby.

--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ jar {
     }
 
     // Pack Dependencies
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    from configurations.compile.collect { it.directory ? it : zipTree(it) }
 
     // Pack Natives
     into("natives") {
