--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'io.vertx:lang-groovy:2.0.0-final'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'mysql:mysql-connector-java:5.1.28'
+    compile 'com.directmyfile.jpower:jpower-core:1.2.1-SNAPSHOT'
     testCompile 'junit:junit:4.11'
 
     codenarc 'org.codenarc:CodeNarc:0.20'
@@ -76,6 +77,7 @@ tasks.withType(GroovyCompile) {
 
 tasks.withType(CodeNarc) {
     configFile = file("gradle/CodeNarc.xml")
+    reportFormat = "html"
 }
 
 // Compile Java code with the Groovy compiler
