--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         exclude group: "com.hazelcast", module: "hazelcast"
     }
     compile 'io.vertx:lang-groovy:2.0.0-final'
-    compile 'com.google.code.gson:gson:2.2.4'
+
     compile 'mysql:mysql-connector-java:5.1.28'
     compile 'com.directmyfile.jpower:jpower-core:1.3.0-SNAPSHOT'
 
@@ -67,6 +67,8 @@ tasks.withType(CodeNarc) {
 // Compile Java code with the Groovy compiler
 sourceSets.main.java.srcDirs = []
 sourceSets.main.groovy.srcDirs += ["src/main/java"]
+
+sourceSets.main.resources.srcDirs += "build/binaries"
 
 sourceCompatibility = 8
 targetCompatibility = 8
